# Control-PromotionMCP

./: .control-promotion.yaml  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/candidates/: bad-incident-string-guard.yaml  bad-model-provider-drift-generated-misclassified.yaml  good-creation-table-contract.yaml  good-model-provider-drift.yaml
examples/guard-specs/: bad-incident-string-guard.yaml  bad-model-provider-drift-generated-misclassified.yaml  good-creation-table-contract.yaml  good-model-provider-drift.yaml
references/: smell-catalog.yaml
src/control_promotion/: __init__.py  cli.py  inspect.py  io.py  prompts.py  reporting.py  resources.py  review.py  validation.py
src/control_promotion/adapters/: generic.yaml
src/control_promotion/catalogs/: base-control-maturity-ladder.yaml  base-routing-matrix.yaml  base-smell-catalog.yaml
src/control_promotion/core/: __init__.py  abstraction.py  fingerprint.py  guard_spec.py  ladder.py  proof_obligation.py  retirement.py  routing.py
src/control_promotion/schemas/: adapter.schema.json  catalog.schema.json  guard_spec.schema.json
src/control_promotion/templates/: smell_gate_report.md.j2
src/control_promotion_mcp/: __init__.py  server.py
tests/: test_cli.py  test_guard_spec.py  test_inspect.py  test_mcp_server.py  test_routing_review.py  test_validation.py
